apps/prod/lda-prod/namespace.yml
# Namespace: lda-prod
apiVersion: v1
kind: Namespace
metadata:
  name: lda-prod
  labels:
    app.kubernetes.io/part-of: lda-prod
    environment: production
    istio.io/dataplane-mode: ambient
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
