apps/prod/lda-prod/svc.yml
# Service: leandrodamasio.rbx.ia.br
apiVersion: v1
kind: Service
metadata:
  name: lda-prod-svc
  namespace: lda-prod
  labels:
    app.kubernetes.io/name: lda-prod-svc
    app.kubernetes.io/part-of: lda-prod
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: lda-prod
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
