apps/prod/lda-prod/ingress.yml
# Ingress: leandrodamasio.rbx.ia.br
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lda-prod-ingress
  namespace: lda-prod
  labels:
    app.kubernetes.io/name: lda-prod-ingress
    app.kubernetes.io/part-of: lda-prod
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: lda-prod-redirect-https@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - leandrodamasio.rbx.ia.br
        - leandrodamasio.rbxsystems.ch
      secretName: lda-prod-tls
  rules:
    - host: leandrodamasio.rbx.ia.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lda-prod-svc
                port:
                  number: 80
    - host: leandrodamasio.rbxsystems.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lda-prod-svc
                port:
                  number: 80
